name:             shentong
version:          0.1.0
author:           Mark Thom
maintainer:       markjordanthom@gmail.com
category:         Language
build-type:       Simple
cabal-version:    >= 1.10

executable shen
  main-is:
      Shen.hs
  build-depends:
      base == 4.*
    , attoparsec
    , bytestring
    , FindBin
    , hashmap
    , mtl >= 2.2.1
    , text
    , time
    , uniplate
    , unordered-containers
    , vector
  default-language:
      Haskell2010
  ghc-options:
      -Wall -fno-warn-name-shadowing
      -fwarn-unused-imports
      -threaded
