name:             shentong
version:          0.3.0
author:           Mark Thom
maintainer:       markjordanthom@gmail.com
category:         Language
build-type:       Simple
cabal-version:    >= 1.10

executable shen
  main-is:
      Shen.hs
  build-depends:
                  base == 4.*
                , bytestring
                , hashmap
                , mtl >= 2.2.1
                , parallel >= 3.2.0.4
                , text
                , time
                , uniplate
                , unordered-containers
                , vector
  default-language:
      Haskell2010
  ghc-options:
      -O2      
      -fno-warn-name-shadowing
      -fno-full-laziness

