name:             shentong
version:          0.3.1
author:           Mark Thom
license:          BSD3
license-file:     LICENSE
maintainer:       markjordanthom@gmail.com
category:         Language
build-type:       Simple
cabal-version:    >= 1.20
synopsis:         A Haskell implementation of the Shen programming language
description:      The Shen programming language is a Lisp that offers pattern matching, lambda calculus consistency, macros, optional lazy evaluation, static type checking, one of the most powerful systems for typing in functional programming, portability over many languages, an integrated fully functional Prolog, and an inbuilt compiler-compiler. Shentong is an implementation of Shen written in Haskell.
source-repository head
      type:     git
      location: https://github.com/mthom/shentong

executable shen
  main-is:
      Shen.hs
  build-depends:
                  base == 4.*
                , bytestring
                , hashmap
                , mtl >= 2.2.1
                , parallel >= 3.2.0.4
                , text
                , time
                , uniplate
                , unordered-containers
                , vector
  default-language:
                Haskell2010
  ghc-options:
      -O2
      -fno-warn-name-shadowing
      -fno-full-laziness
  hs-source-dirs:  Shentong
  other-modules:   Bootstrap, Environment, Primitives, Types, Utils, Wrap, Interpreter.Interpreter,
                   Interpreter.AST, Backend.Core, Backend.Declarations, Backend.FunctionTable,
                   Backend.Load, Backend.LoadShen, Backend.Macros, Backend.PortInfo, Backend.Prolog,
                   Backend.Reader, Backend.Sequent, Backend.Sys, Backend.TStar, Backend.Toplevel,
                   Backend.Track, Backend.Types, Backend.Utils, Backend.Writer, Backend.Yacc